src/test/ui/issue-38875/issue_38875.stderr
error[E0080]: constant evaluation error
  --> $DIR/auxiliary/issue_38875_b.rs:11:24
   |
11 | pub const FOO: usize = *&0;
   |                        ^^^ unimplemented constant expression: deref operation
   |
note: for repeat count here
  --> $DIR/issue_38875.rs:16:22
   |
16 |     let test_x = [0; issue_38875_b::FOO];
   |                      ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error(s)

